--- a/TODO.txt
+++ b/TODO.txt
@@ -2,18 +2,21 @@
 RADYO PI TODO LIST:
 ============================
 
+- cleanup the code:  remove not needed, remove magic numbers
+- tighten logic, remove event etc
+- on radyo end clean up resources etc
+- Write code to show clock when off - what other info? temperature?
 - Start and end markers on the dial
+- Experiment with look and feel,  play with the font, glass front needed?
 - Dim the backlight - too bright  *  this seems to be more difficukt than expected
 - Connect the potentiometer
-- Connect the encoder
-- Experiment with look and feel,  play with the font, glass front needed?
-- Write code to read encoder left turn or right turn
-- Write code to read volume
-- Write code to read on off
-- Write code to show clock when off - what other info? temperature?
+- Write code to read volume from potentiometer
+- Write code to read on off from potentiometer
+- on the dial show station details from mpc parsing
 - Make the sound card work,
 - Do I  need an amp to connect a speaker?
 - Design box ideas with measurement, sockets exposed
+- on pi start up disconnect/clean all, and make the radiopi start
 - Build a cardbox housing
 
 
@@ -25,3 +28,5 @@ DONE
 - station location be based on the location of the last baloon, not station name
 - select /dev/fb1 based on existence
 - Get rid of mouse pointer
+- Connect the encoder
+- Write code to read encoder left turn or right turn
