--- a/TODO.txt
+++ b/TODO.txt
@@ -3,19 +3,21 @@ RADYO PI TODO LIST:
 ============================
 
 
+- remmeber the last delta/station location and volume level between the switch on-off
+- change the clock background to a plain img file/darker
+- on pi reboot start mpd service, cd to radyo pi and start the script 
+- Design box ideas with measurement, sockets exposed
+- Build a cardbox housing
+- Connect the potentiometer
 - convert volume into events
-- Write code to show clock when off - temperature parse, news headline parse?
+- Write code to show temperature parsed on clock screen
 - on OFF/ON action generate event and display OFF screen/ON screen
-- on Encoder push button turn off screen backlight
-- on pi start up disconnect/clean all, and make the radiopi start
+- on Encoder push button turn off screen backlight - code gpio listener for this
 - on radyo end clean up resources etc
 - Start and end markers on the dial
 - on the dial show station details from mpc parsing
 - Make the sound card work?
 - Do I  need an amp to connect a speaker?
-- Design box ideas with measurement, sockets exposed
-- Build a cardbox housing
-- Connect the potentiometer
 - Write code to read volume from potentiometer
 - Write code to read on off from potentiometer
 - Experiment with look and feel,  play with the font, glass front needed?
@@ -32,3 +34,4 @@ DONE
 - Connect the encoder
 - Write code to read encoder left turn or right turn
 - convert the encoder into events
+- Write code to show clock when off -  news headline parse
